[package]
name = "herewerust"
version = "0.1.0"
authors = ["galaio"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "guessing_game",
    "learn_ownership",
    "learn_struct",
    "learn_collections",
    "learn_error",
    "learn_generic",
    "learn_trait",
    "learn_lifetime",
]
